@@ -3,3 +3,4 @@ Remove deprecated SORMResult::getEventProbabilityHohenBichler
 Remove deprecated SORMResult::getGeneralisedReliabilityIndexHohenBichler
 Remove deprecated OptimizationResult::getLagrangeMultipliers, OptimizationAlgorithm::computeLagrangeMultipliers
 Remove deprecated FittingTest::Kolmogorov, FittingTestx::BestModelKolmogorov
+Remove deprecated RandomWalkMetropolisHastings::currentLogLikelihood_ attribute
