@@ -99,6 +99,7 @@
  * #1605 (MaximumLikelihoodFactory cannot be used with FittingTest.Kolmogorov)
  * #1624 (The graphs_loglikelihood_contour example has a bug)
  * #1643 (Problem in MaximumDistribution PDF)
+ * #1647 (MCMC::computeLogLikelihood does not compute the log-likelihood)
  * #1654 (StationaryFunctionalCovarianceModel::discretize segfaults)
  * #1660 (Cannot extract continuous modes from KLResult when dimension>1)
 
